log/build_2024-10-18_23-55-21/line_follow/stderr.log
  File "/home/jason/gxs/GXS_2024_VisionCode/install/line_follow/lib/python3.10/site-packages/line_follow/lf.py", line 101
    读取图片。
        ^
SyntaxError: invalid character '。' (U+3002)

